[package]
name = "bp-hwi-cli"
readme = "README.md"
description = "HWI CLI"
version = "0.11.0"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "hwi"
path = "src/bin/hwi.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
bitcoin = "0.31"
hex = "0.4"
bp-hwi = { path = "../", version = "0.11.0" }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
